--- a/jaxlib/mosaic/gpu/BUILD
+++ b/jaxlib/mosaic/gpu/BUILD
@@ -182,11 +182,12 @@ pybind_extension(
         "//conditions:default": [],
     }),
     deps = [
-        "//jaxlib:kernel_nanobind_helpers",
         "//jaxlib/cuda:cuda_vendor",
+        "@com_google_absl//absl/cleanup",
         "@com_google_absl//absl/strings",
         "@nanobind",
-        "@xla//xla/service:custom_call_status",
+        "@xla//xla/ffi/api:c_api",
+        "@xla//xla/ffi/api:ffi",
         "@xla//xla/tsl/cuda:cudart",
     ],
 )
